--- a/pages/fight_result/index.wxml
+++ b/pages/fight_result/index.wxml
@@ -3,34 +3,34 @@
     <view class="result pr df justBet ac">
         <view class="me">
             <view class="header">
-                <image src="{{meInfo.avatarUrl}}"></image>
+                <image src="{{fightResult.homeHead}}"></image>
                 <view 
-                    wx:if="{{fightResut.homeScore>fightResut.awayScore}}"
+                    wx:if="{{fightResult.homeScore>fightResult.awayScore}}"
                     class="crown pa animated fadeInDown ac"
                 >
                     <image src="../../assets/images/fight_result/crown.png"></image>
                 </view>
             </view>
-            <view class="name overeli">{{meInfo.nickName||'我'}}</view>
-            <view class="score fw600">{{fightResut.homeScore}}分</view>
-            <view class="{{(fightResut.homeScore>=rivalInfo.awayScore?'':'error')+' integral fw600'}}">{{fightResut.homeResult}}</view>
+            <view class="name overeli">{{fightResult.homeName}}</view>
+            <view class="score fw600">{{fightResult.homeScore}}分</view>
+            <view class="{{(fightResult.homeScore>=rivalInfo.awayScore?'':'error')+' integral fw600'}}">{{fightResult.homeResult}}</view>
         </view>
         <view class="vs">
             <image src="../../assets/images/fight_result/vs_res.png"></image>
         </view>
         <view class="rival pr">
             <view class="header">
-                <image src="{{fightResut.awayHeader}}"></image>
+                <image src="{{fightResult.awayHead}}"></image>
                 <view 
-                    wx:if="{{fightResut.homeScore<fightResut.awayScore}}" 
+                    wx:if="{{fightResult.homeScore<fightResult.awayScore}}" 
                     class="crown pa animated fadeInDown"
                 >
                     <image src="../../assets/images/fight_result/crown.png"></image>
                 </view>
             </view>
-            <view class="name overeli">{{fightResut.awayName||"--"}}</view>
-            <view class="score fw600">{{fightResut.awayScore}}分</view>
-            <view class="{{(meInfo.homeScore<=fightResut.awayScore?'':'error')+' integral fw600'}}">{{fightResut.awayResult}}</view>
+            <view class="name overeli">{{fightResult.awayName||"--"}}</view>
+            <view class="score fw600">{{fightResult.awayScore}}分</view>
+            <view class="{{(fightResult.homeScore<=fightResult.awayScore?'':'error')+' integral fw600'}}">{{fightResult.awayResult}}</view>
         </view>
         <view wx:if="{{plate}}" class="plate pa animated fadeInDown">
             <image src="{{plate}}"></image>
