--- a/pages/adminIndex/adminIndex.wxml
+++ b/pages/adminIndex/adminIndex.wxml
@@ -31,16 +31,62 @@
     </view>
     <view class="rules-box_text">
       <view class="text_p">
-        <view>
-          1.“匹配对战”模式
+        <view class="rule_title">
+          一、竞赛方式
         </view>
-        本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动
+        <view class="rule_text">
+            本次竞赛通过微信小程序开展，无需下载APP或关注微信公众号。竞赛模式包括“匹配对战”和“每周一测”，在“匹配对战”中取得对战胜利或者在“每周一测”中成绩排名靠前均可获得积分，累计积分将决定参赛人员排名情况。
+        </view>
+        <view class="rule_title1">
+            （一）“匹配对战”模式
+        </view>
+        <view class="rule_text">
+            本模式每人每天最多参加5轮次，工作日任一时间均可参加，每轮对战最多用时50秒。
+        </view>
+        <view class="rule_text">
+            参赛人员进入本模式后，后台将按照“同省回避”原则（即匹配双方来自不同省份）为其随机匹配1名相同段位对手（根据累计积分将参赛人员分为5个段位，分别为：执法学徒，0-5个积分；执法新兵，6-10个积分；执法骨干，11-20个积分；执法先锋，21-30个积分；执法专家，31个积分及以上。所有参赛人员起始积分均为0分，对应段位为执法学徒）进行对战。每轮对战后台随机抽取5题，由匹配双方同步逐题作答，每题答题时限为10秒（6秒内答对可得100分，7秒内答对可得80分…以此类推，答错或超时均不得分）。最后1题为奖励题，答对可得双倍分数。
+        </view>
+        <view class="rule_text">
+            总得分高者获得本轮对战胜利，胜者可获得1个积分，败者扣除1个积分。同时，为提高新人参赛积极性，实行“新人保护机制”，即等级为“执法学徒”和“执法新兵”的参赛人员对战失利后不扣除积分，等级达到执法骨干及以上的则正常扣除1个积分。
+        </view>
+        <view class="rule_title1">
+            （二）“每周一测”模式
+        </view>
+        <view class="rule_text">
+            本模式每人每周最多参加1次，工作日任一时间均可参加，每次答题限时30分钟完成。
+        </view>
+        <view class="rule_text">
+            参赛人员进入本模式后，后台从题库中随机抽取30题，由参赛人员逐题作答。答题完成后根据参赛人员答题成绩进行排名（如有多人成绩相同，答题用时少者排名靠前）。
+        </view>
+        <view class="rule_text">
+            排名位居每周参赛总人数前10%（含）的，可获得5个积分；前10%-30%（含）的，可获得4个积分；前30%-50%（含）的，可获得3个积分；排名未达到前50%，但成绩不低于60分的，可获得1个积分，成绩低于60分的，不获得积分。
+        </view>
       </view>
       <view class="text_p">
-        <view>
-          2.“匹配对战”模式
+        <view class="rule_title">
+          二、公众参与
         </view>
-        本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动本模式为常规活动
+        <view class="rule_title1">
+            （一）参与答题
+        </view>
+        <view class="rule_text">
+            公众（含辅助执法人员）可在竞赛开始第二周起参与“每周一测”，所用题库为前一周被更新替换题目。
+        </view>
+        <view class="rule_text">
+            每周答题排名靠前的公众可获得电子荣誉证书，但其成绩不计入所在地区参赛集体竞赛成绩。
+        </view>
+        <view class="rule_title1">
+            （二）好友助力
+        </view>
+        <view class="rule_text">
+            参赛人员可转发其战绩页面，邀请好友（须为非参赛人员）为其点赞助力,集满5个赞即可自动获得1张“积分保护卡”。持有“积分保护卡”的参赛人员在当日“匹配对战”第一次失利时不会扣除积分。
+        </view>
+        <view class="rule_text">
+            参赛人员进入本模式后，后台从题库中随机抽取30题，由参赛人员逐题作答。答题完成后根据参赛人员答题成绩进行排名（如有多人成绩相同，答题用时少者排名靠前）。
+        </view>
+        <view class="rule_text">
+            非参赛人员每人每天最多点赞5次，且不能用于同一参赛人员。
+        </view>
       </view>
     </view>
     <view class="rules-box_close" bindtap="rulesBoxShow">
