--- a/pages/adminIndex/adminIndex.wxss
+++ b/pages/adminIndex/adminIndex.wxss
@@ -107,7 +107,7 @@ page {
   width: 100%;
   height: 90%;
   box-sizing: border-box;
-  padding: 0 36rpx;
+  padding: 0 36rpx 60rpx;
   overflow: scroll;
   font-size: 24rpx;
   color: #58585a;
@@ -123,4 +123,16 @@ page {
   right: 23rpx;
   font-size: 34rpx;
   color: #cafffe;
+}
+.rule_title,.rule_title1 {
+    margin-top: 20rpx;
+}
+.rule_title1 {
+    margin-bottom: 20rpx;
+}
+.rule_text {
+    line-height: 40rpx;
+    text-indent: 48rpx;
+    margin-top: 10rpx;
+    text-align: justify;
 }
