--- a/pages/provinceWarSituation/provinceWarSituation.wxss
+++ b/pages/provinceWarSituation/provinceWarSituation.wxss
@@ -23,7 +23,7 @@ page {
   width: 100%;
   height: 100rpx;
   box-sizing: border-box;
-  margin-top: 30rpx;
+  padding-top: 30rpx;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
