--- a/pages/week/index.wxss
+++ b/pages/week/index.wxss
@@ -98,6 +98,13 @@
   width: 100%;
   border-radius: 20rpx 20rpx 0 0;
 }
+.week-box .week .topic-box .fixButton {
+  background: #46d7b6;
+}
+.week-box .week .topic-box .fixButton::before {
+  content: '';
+  width: 0;
+}
 .week-box .week .topic-box .type {
   padding: 0 40rpx 20rpx;
 }
