--- a/pages/wrongQuestion/wrongQuestion.wxss
+++ b/pages/wrongQuestion/wrongQuestion.wxss
@@ -65,16 +65,19 @@ page {
   flex: 1;
   height: 0;
   overflow-y: auto;
+  background: #efedf0;
 }
 .question__item{
+  background: #fff;
   margin-bottom: 20rpx;
   padding: 30rpx;
-  box-shadow: 0px 6rpx 12rpx -4rpx rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 4rpx 10rpx -4rpx rgba(0, 0, 0, 0.3);
 }
 .question__item__header{
   font-size: 32rpx;
   line-height: 1.5;
   color: #3b393c;
+  font-weight: 500;
   margin-bottom: 30rpx;
 }
 .question__content__item{
@@ -85,7 +88,7 @@ page {
   font-size: 28rpx;
   color: #434144;
   font-weight: 400;
-  box-shadow: 0 3rpx 20rpx 3rpx rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3rpx 20rpx 3rpx rgba(0, 0, 0, 0.1);
   border-radius: 15rpx;
   margin-bottom: 15rpx;
 }
@@ -107,4 +110,5 @@ page {
   font-size: 32rpx;
   color: #3b393c;
   line-height: 1.5;
+  font-weight: 500;
 }
