--- a/pages/adminIndex/adminIndex.wxml
+++ b/pages/adminIndex/adminIndex.wxml
@@ -4,12 +4,12 @@
   <view class="province-item battle" data-type='provinceWarSituation' bindtap="go">
     <!-- <image class="province-ranking_icon" src="/assets/images/person2.png"></image> -->
     <!-- <text>本省战况</text> -->
-    <image src="/assets/images/adminIndex/country.png"></image>
+    <image src="/assets/images/adminIndex/province.png"></image>
   </view>
   <view class="province-item national-ranking" data-type='adminRanking' bindtap="go">
     <!-- <text>全国排行榜</text>
     <image class="national-ranking_icon" src="/assets/images/person1.png"></image> -->
-    <image src="/assets/images/adminIndex/province.png"></image>
+    <image src="/assets/images/adminIndex/country.png"></image>
   </view>
   <view class="province-item province-ranking" data-type='provinceRanking' bindtap="go">
     <!-- <image class="province-ranking_icon" src="/assets/images/organization.png"></image>
@@ -28,6 +28,9 @@
             <text class="iconfont icon-tishi"></text>
           </text>
           <text>赛制规则</text>
+      </view>
+      <view class="bottom-fun_result loginOut" bindtap="loginOut">
+          退出登录
       </view>
       <button class="bottom-fun_result" open-type="share">
         <text class="bottom-fun_icon">
