--- a/pages/adminIndex/adminIndex.wxss
+++ b/pages/adminIndex/adminIndex.wxss
@@ -78,10 +78,18 @@ page {
   background: transparent;
   margin: 0!important;
   font-size: 28rpx;
+  line-height: 28rpx;
   font-weight: 400;
   padding: 0;
   color: #46d7b6;
   line-height: 35rpx;
+}
+
+.bottom-fun_result.loginOut {
+    height: 28rpx;
+    padding: 4rpx 8rpx 8rpx;
+    border: 1px solid #46d7b6;
+    border-radius: 8rpx;
 }
 .bottom-fun_icon {
   margin-right: 4rpx;
