--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,7 +7,7 @@
         <image data-type="honor" bindtap="go" class="honor-logo" src='/assets/images/honor/honor-logo.png'></image>
      </view>
      <view class="userinfo_right">
-        <view class="userName">{{userInfo.nickName}}</view>
+        <view class="userName">{{userInfo.name}}</view>
         <view class="other_info">
           <view class="identity">
             <view class="identity_icon">
