--- a/pages/shareImg/shareImg.wxml
+++ b/pages/shareImg/shareImg.wxml
@@ -6,7 +6,7 @@
       <view class="footer__left">
         <image class="avatar" src="{{userInfo.headUrl}}"></image>
         <view class="des">
-          <view class="des__item">{{userInfo.nickName}}</view>
+          <view class="des__item">{{userInfo.name}}</view>
           <view class="des__item">{{userInfo.userLevel}}</view>
           <view class="des__item">{{userInfo.winCount}}胜{{userInfo.loseCount}}负｜{{userInfo.score}}分</view>
         </view>
