--- a/pages/loginType/loginType.wxml
+++ b/pages/loginType/loginType.wxml
@@ -28,8 +28,8 @@
       辅助执法人员与公众
     </button> -->
     <button 
-      style="margin-top: 80rpx"
-      class='bj-loginType__public'
+      style="margin-top: 40rpx"
+      class='bj-loginType__lawEn'
       open-type="getUserInfo"
       bindgetuserinfo="getUserInfoAdmin"
     >
